--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase": "^8.8.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-confirm-alert": "^2.7.0",
