--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-paginate": "^7.1.3",
+    "react-pagination": "^1.0.0",
     "react-scripts": "0.9.5"
   },
   "devDependencies": {
